# netschoolapi_rust

./: Cargo.toml  README.rst
src/: auth_data.rs  json.rs  lib.rs  schemas.rs  user_data.rs
src/net_school_clients/: inactive_client.rs  logged_in_client.rs  logged_out_client.rs  mod.rs
src/web_clients/: logged_in_web_client.rs  logged_out_web_client.rs  mod.rs  request_builder.rs  request_sender.rs  url_ending_with_a_slash.rs  url_with_api_base_route.rs  web_client_trait.rs  web_client_with_cookies.rs  web_client_wrapper.rs
